syntax = "proto3";

option csharp_namespace = "Identity.Domain.Protos";

package User;

service UserUseCase{
  rpc Login(PLoginIn)returns(PLoginOut);
}

message PLoginIn{
  string email = 1;
  string password =2;
}

message PLoginOut{
  bool sucess= 1; 
}